--- a/style.css
+++ b/style.css
@@ -18,7 +18,9 @@ canvas {
   margin-top: 20px;
   border: 1px solid #ccc;
 }
-
+ a, a:visited, a:active {
+    color: #105187;
+ }
 
 
   /* Cursor feedback while dragging */
